/*
 * $Id: ChangeLog,v 1.2452 2004/03/02 21:55:19 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-02 23:50 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/source/vm/itemapi.c
    ! yet another workaround in hb_itemStrVal() for rounding the
      last digit in big number

   * xharbour/bin/hb-func.sh
    ! add missing \

2004-03-03 05:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * utils/hbtest/rt_stra.prg
    ! change result to actual return values :
      * HB_ValToStr( .F. ) does return "F", not ".F."
      * HB_ValToStr( .T. ) does return "T", not ".T."

2004-03-02 22:10 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/itemapi.c
    * a work arround for compiler which optimize x / c where c
      is constant giving code: x * ( 1 / c )

2004-03-02 13:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed bug in hb_pp_ParseDefine() related to calculation of pTmp and iLen

2004-03-02 10:21 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    * Reinstated hb_itemClear() on hb_vm_aEnumCollection[] and hb_vm_aWithObject[]

     /*
        This solves uiHolders overflow and memory leak when RETURN was issues
        from WITH OBJECT or FOR EACJ construct. I tested with Return and Break,
        and could not find a scenario where double release might occure.
        Please report any new GPF expreience that might be related to WITH OBJECT
        or FOR EACH.
     */

   * utils/hbtest/rt_ccall.prg
     * bcc55 was erroring on 5000000000LL changed to (LONGLONG) 5000000000
       Did not have time to review, so just a quick patch.

2004-03-02 18:22 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/source/vm/itemapi.c
    ! fixed bug I introduce in last commit for 0 double value.